test_suite/tests/ui/conflict/flatten-skip-serializing.stderr
error: #[serde(flatten)] can not be combined with #[serde(skip_serializing)]
 --> $DIR/flatten-skip-serializing.rs:6:5
  |
6 | /     #[serde(flatten, skip_serializing)]
7 | |     other: Other,
  | |________________^

error: aborting due to previous error

